--- a/projects/catalog/Narzedzia developera and Programowanie w JS/27.08.html
+++ b/projects/catalog/Narzedzia developera and Programowanie w JS/27.08.html
@@ -7,6 +7,20 @@
 </head>
 <body>
     <div class="container"></div>
-     <!--div.container.tes-->
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus officiis omnis, quisquam maxime nam architecto repudiandae deserunt vitae? Recusandae placeat laboriosam possimus quibusdam. Omnis temporibus mollitia inventore consequuntur! Nam, itaque.</p>
+
+    <ul>
+        <li>Element </li>
+        <li>Element </li>
+        <li>Element </li>
+        <li>Element </li>
+    
+    </ul>
+
+<!--div.nav-bar-->
+<!--ul#nav>il*4 a-->
+
+
 </body>
 </html>
